src/test/ui/nll/match-guards-partially-borrow.stderr
error[E0510]: cannot assign `q` in match guard
  --> $DIR/match-guards-partially-borrow.rs:55:13
   |
LL |     match q {
   |           - value is immutable in match guard
...
LL |             q = true;
   |             ^^^^^^^^ cannot assign

error[E0510]: cannot assign `r` in match guard
  --> $DIR/match-guards-partially-borrow.rs:67:13
   |
LL |     match r {
   |           - value is immutable in match guard
...
LL |             r = true;
   |             ^^^^^^^^ cannot assign

error[E0510]: cannot assign `t` in match guard
  --> $DIR/match-guards-partially-borrow.rs:91:13
   |
LL |     match t {
   |           - value is immutable in match guard
...
LL |             t = true;
   |             ^^^^^^^^ cannot assign

error[E0510]: cannot mutably borrow `x.0` in match guard
  --> $DIR/match-guards-partially-borrow.rs:105:22
   |
LL |     match x {
   |           - value is immutable in match guard
...
LL |                 Some(ref mut r) => *r = None,
   |                      ^^^^^^^^^ cannot mutably borrow

error[E0506]: cannot assign to `t` because it is borrowed
  --> $DIR/match-guards-partially-borrow.rs:117:13
   |
LL |         s if {
   |         - borrow of `t` occurs here
LL |             t = !t;
   |             ^^^^^^ assignment to borrowed `t` occurs here
LL |             false
LL |         } => (), // What value should `s` have in the arm?
   |         - borrow later used here

error[E0510]: cannot assign `y` in match guard
  --> $DIR/match-guards-partially-borrow.rs:128:13
   |
LL |     match *y {
   |           -- value is immutable in match guard
...
LL |             y = &true;
   |             ^^^^^^^^^ cannot assign

error[E0510]: cannot assign `z` in match guard
  --> $DIR/match-guards-partially-borrow.rs:139:13
   |
LL |     match z {
   |           - value is immutable in match guard
...
LL |             z = &true;
   |             ^^^^^^^^^ cannot assign

error[E0510]: cannot assign `a` in match guard
  --> $DIR/match-guards-partially-borrow.rs:151:13
   |
LL |     match a {
   |           - value is immutable in match guard
...
LL |             a = &true;
   |             ^^^^^^^^^ cannot assign

error[E0510]: cannot assign `b` in match guard
  --> $DIR/match-guards-partially-borrow.rs:162:13
   |
LL |     match b {
   |           - value is immutable in match guard
...
LL |             b = &true;
   |             ^^^^^^^^^ cannot assign

error: aborting due to 9 previous errors

Some errors have detailed explanations: E0506, E0510.
For more information about an error, try `rustc --explain E0506`.
